Update Menu.html icon href

--- a/HTML/Menu.html
+++ b/HTML/Menu.html
@@ -6,7 +6,7 @@
     <!-- css style Sheet  -->
     <link rel="stylesheet" href="../CSS/Menu.css">
     <link rel="stylesheet" href="../CSS/mainStyle.css">
-    <link rel="icon" href="imgs/logo.png">
+    <link rel="icon" href="../imgs/logo.png">
     <!-- Google Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
